syntax = "proto3";

option go_package = "./proto";

// 定义服务
service Greeter{
    rpc SayHello (HelloRequest) returns (HelloReply){}
}

// 请求对象
message HelloRequest {
    string name = 1;
}

// 响应对象
message HelloReply {
    string message = 1;
}